fix content height in sidebar mode to not overlap with footer

--- a/doxygen-awesome-sidebar-only.css
+++ b/doxygen-awesome-sidebar-only.css
@@ -50,7 +50,7 @@
     }
 
     #doc-content {
-        height: calc(100vh - 28px) !important;
+        height: calc(100vh - 31px) !important;
         padding-bottom: calc(3 * var(--spacing-large));
         padding-top: calc(var(--top-height) - 80px);
         box-sizing: border-box;
